# SoftEng

./: .gitignore  LICENSE  README.md
lab01/: README.md  workspace.dsl
lab02/: .clang-format  CMakeLists.txt  README.md  build.py  docker-compose.yml
lab02/common/: CMakeLists.txt
lab02/common/auth/: jwt_credentials.hpp
lab02/common/utils/: request_args.cpp  request_args.hpp
lab02/directory_service/: CMakeLists.txt  README.md
lab02/directory_service/configs/: static_config.yaml
lab02/directory_service/schemas/: openapi.yaml
lab02/directory_service/src/: main.cpp
lab02/directory_service/src/handlers/create/: handler.cpp  handler.hpp
lab02/directory_service/src/handlers/delete/: handler.cpp  handler.hpp
lab02/directory_service/src/handlers/files/: handler.cpp  handler.hpp
lab02/directory_service/src/handlers/get/: handler.cpp  handler.hpp
lab02/directory_service/src/handlers/list/: handler.cpp  handler.hpp
lab02/directory_service/src/handlers/move/: handler.cpp  handler.hpp
lab02/directory_service/src/handlers/update/: handler.cpp  handler.hpp
lab02/directory_service/src/middlewares/: auth_middleware.cpp
lab02/directory_service/src/models/: directory.hpp  file.hpp
lab02/directory_service/src/repositories/: directory_repository.hpp  in_memory_directory_repository.cpp  in_memory_directory_repository.hpp
lab02/directory_service/tests/: conftest.py  test_directories.py
lab02/directory_service/tests/unit/: auth_repository_test.cpp  directory_repository_test.cpp
lab02/docker/: Dockerfile
lab02/file_service/: CMakeLists.txt
lab02/file_service/configs/: static_config.yaml
lab02/file_service/schemas/: openapi.yaml
lab02/file_service/src/: main.cpp
lab02/file_service/src/handlers/update/: handler.cpp
lab02/file_service/src/middlewares/: protected_handler_pipeline_builder.hpp
lab02/file_service/src/repositories/: file_repository.cpp  file_repository.hpp  in_memory_file_repository.cpp
lab02/file_service/tests/: test_files.py
lab02/user_service/: .clang-format  CMakeLists.txt  Dockerfile  build.py  conanfile.txt
lab02/user_service/configs/: static_config.yaml
lab02/user_service/schemas/: openapi.yaml
lab02/user_service/src/: main.cpp
lab02/user_service/src/auth/: auth_repository.cpp  auth_repository.hpp
lab02/user_service/src/auth/repositories/: in_memory_auth_repository.cpp  in_memory_auth_repository.hpp
lab02/user_service/src/handlers/: base_handler.hpp
lab02/user_service/src/handlers/login/: handler.cpp  handler.hpp
lab02/user_service/src/handlers/register/: handler.cpp  handler.hpp
lab02/user_service/src/handlers/search/: handler.cpp
lab02/user_service/src/models/: user.hpp
lab02/user_service/tests/: conftest.py  test_auth.py  test_basic.py  test_login.py  test_register.py  test_search.py
lab02/user_service/tests/unit/: auth_repository_test.cpp
lab03/: .dockerignore  CMakeLists.txt  README.md  build.py  docker-compose.yml
lab03/common/utils/: uuid_generator.hpp
lab03/directory_service/: CMakeLists.txt
lab03/directory_service/configs/: config_vars.testing.yaml  config_vars.testsuite.yaml
lab03/directory_service/src/: main.cpp
lab03/directory_service/tests/: conftest.py  pytest.ini  test_basic.py  test_list.py  test_update.py
lab03/file_service/: CMakeLists.txt
lab03/file_service/configs/: config_vars.testing.yaml
lab03/file_service/schemas/: openapi.yaml
lab03/file_service/src/: main.cpp
lab03/file_service/src/handlers/delete/: handler.cpp
lab03/file_service/src/handlers/get/: handler.hpp
lab03/file_service/src/repositories/: in_memory_file_repository.cpp  in_memory_file_repository.hpp
lab03/file_service/tests/: test_files.py
lab03/file_service/tests/unit/: file_repository_test.cpp
lab03/init-db/: 02-directories.sql
lab03/tools/: generate_test_data.py
lab03/user_service/: .clang-format  CMakeLists.txt
lab03/user_service/configs/: static_config.yaml
lab03/user_service/postgresql/schemas/: users.sql
lab03/user_service/queries/read/: search_user_by_last_name_pattern.sql  select_user_by_login_only.sql
lab03/user_service/queries/write/: insert_user.sql
lab03/user_service/src/auth/: auth_repository.cpp  auth_repository.hpp
lab03/user_service/src/auth/repositories/: postgres_auth_repository.cpp  postgres_auth_repository.hpp
lab03/user_service/src/handlers/: base_handler.hpp
lab03/user_service/src/handlers/login/: handler.cpp  handler.hpp
lab03/user_service/src/handlers/register/: handler.cpp
lab03/user_service/src/handlers/search/: handler.cpp
lab03/user_service/src/models/: user.hpp
lab03/user_service/tests/: test_basic.py  test_login.py  test_register.py
lab03/user_service/tests/unit/: auth_repository_test.cpp
lab04/: CMakeLists.txt  Dockerfile  README.md  build.py  docker-compose.yml  optimization.md  queries.md  validation.js
lab04/common/: CMakeLists.txt
lab04/common/utils/: request_args.cpp
lab04/directory_service/configs/: static_config.yaml
lab04/directory_service/tests/: conftest.py
lab04/file_service/: CMakeLists.txt  README.md
lab04/file_service/configs/: config_vars.docker.yaml  config_vars.testing.yaml
lab04/file_service/tests/: conftest.py
lab04/init-db/: 01-users.sql
lab04/tools/: generate_test_users.py
lab05/: CMakeLists.txt  README.md  data.json  docker-compose.yml  performance_design.md  schema_design.md
lab05/common/auth/: jwt_credentials.cpp
lab05/common/utils/: expected.hpp
lab05/directory_service/: CMakeLists.txt
lab05/directory_service/configs/: config_vars.docker.yaml  config_vars.testsuite.yaml  static_config.yaml
lab05/directory_service/src/: main.cpp
lab05/directory_service/tests/: conftest.py  test_files.py
lab05/file_service/configs/: config_vars.docker.yaml  config_vars.testing.yaml  secure_data.json  (+2 more)
lab05/tools/: register_and_create_folder.sh
lab05/user_service/: CMakeLists.txt  Dockerfile  README.md
lab06/: CMakeLists.txt  README.md  conanfile.txt  docker-compose.yml  event_catalog.md  event_driven_design.md
lab06/directory_service/: CMakeLists.txt
lab06/file_service/: CMakeLists.txt
(+120 files in other folders)
